kubernetes/api-gateway-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  serviceName: "api"
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: docker.io/shanisma/pk-k8s:0.0.1
        command: ['/bin/bash', '-c']
        args: ['gunicorn --workers=1 --bind=0.0.0.0:8080 --access-logfile - --log-file - --log-level=debug api:api']
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            name: api
