kubernetes/light-controller-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: light-controller
spec:
  selector:
    matchLabels:
      app: light-controller
  serviceName: "light-controller"
  replicas: 1
  template:
    metadata:
      labels:
        app: light-controller
    spec:
      containers:
      - name: light-controller
        image: docker.io/shanisma/pk-k8s:0.0.1
        command: ['/bin/bash', '-c']
        args: ['cd /app/controllers && python light.py']
        imagePullPolicy: IfNotPresent
