kubernetes/sprinklers-controller-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sprinklers-controller
spec:
  selector:
    matchLabels:
      app: sprinklers-controller
  serviceName: "sprinklers-controller"
  replicas: 1
  template:
    metadata:
      labels:
        app: sprinklers-controller
    spec:
      containers:
      - name: sprinklers-controller
        image: docker.io/shanisma/pk-k8s-dev:0.0.1
        command: ['/bin/bash', '-c']
        args: ['python sprinklers_controller.py']
        imagePullPolicy: Always
