kubernetes/sprinklers-registry-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sprinklers-registry
spec:
  selector:
    matchLabels:
      app: sprinklers-registry
  serviceName: "sprinklers-registry"
  replicas: 1
  template:
    metadata:
      labels:
        app: sprinklers-registry
    spec:
      containers:
      - name: sprinklers-registry
        image: docker.io/shanisma/pk-k8s:0.0.1
        command: ['/bin/bash', '-c']
        args: ['python sprinkler_registry.py']
        imagePullPolicy: IfNotPresent
