kubernetes/water-controller-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: water-controller
spec:
  selector:
    matchLabels:
      app: water-controller
  serviceName: "water-controller"
  replicas: 1
  template:
    metadata:
      labels:
        app: water-controller
    spec:
      containers:
      - name: water-controller
        image: docker.io/shanisma/pk-k8s-dev:0.0.1
        command: ['/bin/bash', '-c']
        args: ['python water_controller.py']
        imagePullPolicy: Always
