kubernetes/eclipse-mosquitto-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqtt
spec:
  selector:
    matchLabels:
      app: mqtt
  serviceName: mqtt
  replicas: 1
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
      - name: mqtt
        image: "docker.io/shanisma/eclipse-mosquitto:1.6.12"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app: mqtt
  type: NodePort
  ports:
    - port: 1883
      nodePort: 30180
      name: mqtt
