kubernetes/grafana-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  ports:
  - name: service
    nodePort: 31801
    port: 80
    protocol: TCP
    targetPort: 3000
  type: NodePort
