kubernetes/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086
  type: ClusterIP
