kubernetes/influxdb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  serviceName: "influxdb"
  replicas: 1
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: "influxdb"
        ports:
          - containerPort: 8086
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: scw-bssd
      resources:
        requests:
          storage: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086
  type: ClusterIP
