kubernetes/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app: mqtt
  ports:
    - name: svc
      port: 1883
    - name: svc-1
      port: 9001
  type: ClusterIP
