kubernetes/mqtt-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqtt
spec:
  selector:
    matchLabels:
      app: mqtt
  serviceName: mqtt
  replicas: 1
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
      - name: mqtt
        image: eclipse-mosquitto
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9001
          - containerPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app: mqtt
  ports:
    - name: svc
      port: 1883
    - name: svc-1
      port: 9001
  type: ClusterIP
