kubernetes/timescaledb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: tsdb
  ports:
    - port: 5432
  type: ClusterIP
