kubernetes/timescaledb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsdb
spec:
  selector:
    app: tsdb
  ports:
    - port: 5432
  type: ClusterIP
