kubernetes/activemq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqtt
spec:
  selector:
    matchLabels:
      app: activemq
  serviceName: activemq
  replicas: 1
  template:
    metadata:
      labels:
        app: activemq
    spec:
      containers:
      - name: activemq
        image: vromero/activemq-artemis
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 1883
          - containerPort: 8161
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app: activemq
  type: NodePort
  ports:
    - port: 1883
      nodePort: 30180
      name: mqtt
---
apiVersion: v1
kind: Service
metadata:
  name: activemq-web
spec:
  selector:
    app: activemq
  type: ClusterIP
  ports:
    - port: 8161
      name: webserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: active-mq-web
spec:
  rules:
  - host: activemq.010e7d5e-3a86-4c87-a4bc-8d7a82bf5d2e.nodes.k8s.fr-par.scw.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: activemq-web
            port:
              number: 8161
