kubernetes/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - host: api-gateway.localhost
  backend:
      serviceName: api-gateway
      servicePort: 8001
